# randomness

./: .gitignore  .pylintrc  Pipfile  README.md  analysis.py  entrypoint.py  main.py  pyproject.toml  renew_token.py  requirement.txt  requirements.txt  run.py  server.py  settings.json  shared.py  tasks.py
.agent/rules/: instructions.md  new-backend-code.md  new-frontend-code.md
.agent/skills/backend-formatting/: SKILL.md
.agent/skills/backend-linting/: SKILL.md
.agent/skills/backend-package-management/: SKILL.md
.agent/skills/backend-scripts/: SKILL.md
.agent/skills/backend-tests/: SKILL.md
.agent/skills/backend-type-annotation/: SKILL.md
.agent/skills/backend-virtual-environment/: SKILL.md
.agent/skills/manage-infrastructure/: SKILL.md
.github/actions/uv-setup/: action.yaml
.github/workflows/: backend_linting.yaml  pull_request.yaml
docker/: docker-compose.yaml  mongod.conf
docs/plans/: 2026-03-28-spotify-randomness.md  task.md
handlers/: db_handler.py  spotify_handler.py
os/: randomness.service  randomness.timer
randomness/: __init__.py  client.py  client_aouth.py  client_requests.py  common.py  db.py  db_library.py  db_oauth.py  oauth.py  settings.py
randomness/config/: __init__.py  config.py  schema.py
scripts/: daemon.bash  linter.bash
spotify/: __init__.py  auth.py  client.py  custom_types.py  db.py  helpers.py  randomness.py  schema.py  token.py  types.py
spotify/samples/: liked_tracks_sample.json  playlist_tracks_sample.json
src/: auth.py  client.py  db_client.py  logger.py  main.py  randomness.py  spotify_types.py
src/spotify/: __init__.py  auth.py  client.py  db.py  helpers.py  randomness.py  token.py  types.py
static/: main.css
static/css/: main.css
static/js/: main.js
templates/: callback.jinja  failed.jinja  layout.jinja  login.jinja  run.jinja
tests/: conftest.py  test_auth.py  test_client.py  test_date_migration.py  test_db.py  test_helpers.py  test_likedtracksresponse.py  test_likedtrackstesponse.py  test_randomness.py  test_retry.py  test_schema_type_validation.py  test_token.py
tests/test_data/: me_tracks.json
