[project]
name = "randomness"
version = "0.1.0"
description = "Random of Randomness"
authors = [
    { name = "Juan Pablo Molina Matute", email = "jpmolinamatute@gmail.com" },
]
requires-python = ">=3.14.0"
dependencies = [
    "pkce>=1.0.3",
    "pydantic>=2.12.4",
    "pymongo>=4.15.4",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "types-requests>=2.32.4.20250913",
    "pytest>=8.0.0",
    "responses>=0.25.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.14.10",
]

[tool.uv]
python-preference = "only-managed"
required-version = ">=0.7.17"

[tool.mypy]
strict = true
python_version = "3.14"
plugins = ["pydantic.mypy"]
sqlite_cache = true
show_column_numbers = true
show_error_codes = true
follow_imports = "silent"
warn_unreachable = true
exclude = "(__pycache__|.mypy_cache|.pytest_cache|.venv)/"
# Treat only configured roots as package bases and resolve imports from ./src
explicit_package_bases = true
mypy_path = ["./src"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_untyped_fields = true

[tool.pytest.ini_options]
addopts = "-vra  --color=yes"
testpaths = "./tests"
pythonpath = "./src"
filterwarnings = [
    # See: https://docs.pytest.org/en/stable/how-to/capture-warnings.html#controlling-warnings
    "ignore:Core Pydantic V1 functionality isn't compatible with Python 3\\.14 or greater\\.:UserWarning:fastapi\\._compat\\.v1",
]
[tool.ruff]
lint.extend-select = ["PTH", "I", "PL", "UP"]
lint.fixable = ["ALL"]
lint.unfixable = []
exclude = [
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    ".git",
    ".vscode",
    ".github",
]
include = ["pyproject.toml", "spotify/**/*.py", "tests/**/*.py"]
line-length = 100
target-version = "py314"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
