[project]
name = "randomness"
version = "0.1.0"
description = "Random of Randomness"
authors = [
    { name = "Juan Pablo Molina Matute", email = "jpmolinamatute@gmail.com" },
]
requires-python = ">=3.14.0"
dependencies = [
    "pkce>=1.0.3",
    "pydantic>=2.12.4",
    "pymongo>=4.15.4",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "httpx>=0.27.0",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "types-requests>=2.32.4.20250913",
    "pytest>=8.0.0",
    "responses>=0.25.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.14.10",
    "ty>=0.0.14",
]

[tool.uv]
python-preference = "only-managed"
required-version = ">=0.7.17"

[tool.ty.environment]
python-platform = "linux"

[tool.pytest.ini_options]
addopts = "-vra  --color=yes"
testpaths = "./tests"
pythonpath = "./spotify"
filterwarnings = [
    # See: https://docs.pytest.org/en/stable/how-to/capture-warnings.html#controlling-warnings
    "ignore:Core Pydantic V1 functionality isn't compatible with Python 3\\.14 or greater\\.:UserWarning:fastapi\\._compat\\.v1",
]
[tool.ruff]
lint.extend-select = ["PTH", "I", "PL", "UP"]
lint.fixable = ["ALL"]
lint.unfixable = []
exclude = [
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    ".git",
    ".vscode",
    ".github",
]
include = ["spotify/**/*.py", "tests/**/*.py", "main.py"]
line-length = 100
target-version = "py314"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
